kubernetes/fluxcd/repositories/hello-image-policy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-image
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello-image-app
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-image-app
    spec:
      containers:
        - name: hello-image-app
          image: mhussain78/hello-flux:0.0.47  # {"$imagepolicy": "default:hello-image-app"}
          ports:
            - containerPort: 8080
