kubernetes/fluxcd/repositories/hello-image-policy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-image-service
  namespace: default
spec:
  selector:
    app: hello-image-app
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8080
